Quick: Remove Staff (March/April Exodus)

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -3,7 +3,7 @@
 	Full Time Staff</h3>
 <center>
 	<p style="clear: both; font-size: 15px;">
-		<strong><a href="/web/website/about/directory/#A" style="text-decoration: none; font-size: 15px;">A</a>&nbsp; <a href="/web/website/about/directory/#B" style="text-decoration: none; font-size: 15px;">B</a>&nbsp; <a href="/web/website/about/directory/#C" style="text-decoration: none; font-size: 15px;">C</a>&nbsp; <a href="/web/website/about/directory/#D" style="text-decoration: none; font-size: 15px;">D</a>&nbsp; <a href="/web/website/about/directory/#E" style="text-decoration: none; font-size: 15px;">E</a>&nbsp; <a href="/web/website/about/directory/#F" style="text-decoration: none; font-size: 15px;">F</a>&nbsp; <a href="/web/website/about/directory/#G" style="text-decoration: none; font-size: 15px;">G</a>&nbsp; <a href="/web/website/about/directory/#H" style="text-decoration: none; font-size: 15px;">H</a>&nbsp; I&nbsp; <a href="/web/website/about/directory/#J" style="text-decoration: none; font-size: 15px;">J</a>&nbsp; <a href="/web/website/about/directory/#K" style="text-decoration: none; font-size: 15px;">K</a>&nbsp; <a href="/web/website/about/directory/#L" style="text-decoration: none; font-size: 15px;">L</a>&nbsp; <a href="/web/website/about/directory/#M" style="text-decoration: none; font-size: 15px;">M</a>&nbsp; <a href="/web/website/about/directory/#N" style="text-decoration: none; font-size: 15px;">N</a>&nbsp; <a href="/web/website/about/directory/#O" style="text-decoration: none; font-size: 15px;">O</a>&nbsp; <a href="/web/website/about/directory/#P" style="text-decoration: none; font-size: 15px;">P</a>&nbsp; Q&nbsp; <a href="/web/website/about/directory/#R" style="text-decoration: none; font-size: 15px;">R</a>&nbsp; <a href="/web/website/about/directory/#S" style="text-decoration: none; font-size: 15px;">S</a>&nbsp; <a href="/web/website/about/directory/#T" style="text-decoration: none; font-size: 15px;">T</a>&nbsp; <a href="/web/website/about/directory/#U" style="text-decoration: none; font-size: 15px;">U</a>&nbsp; <a href="/web/website/about/directory/#V" style="text-decoration: none; font-size: 15px;">V</a>&nbsp; <a href="/web/website/about/directory/#W" style="text-decoration: none; font-size: 15px;">W</a>&nbsp; <a href="/web/website/about/directory/#X" style="text-decoration: none; font-size: 15px;">X</a>&nbsp; <a href="/web/website/about/directory/#Y" style="text-decoration: none; font-size: 15px;">Y</a>&nbsp; <a href="/web/website/about/directory/#Z" style="text-decoration: none; font-size: 15px;">Z</a>&nbsp;</strong></p>
+		<strong><a href="/web/website/about/directory/#A" style="text-decoration: none; font-size: 15px;">A</a>&nbsp; <a href="/web/website/about/directory/#B" style="text-decoration: none; font-size: 15px;">B</a>&nbsp; <a href="/web/website/about/directory/#C" style="text-decoration: none; font-size: 15px;">C</a>&nbsp; <a href="/web/website/about/directory/#D" style="text-decoration: none; font-size: 15px;">D</a>&nbsp; <a href="/web/website/about/directory/#E" style="text-decoration: none; font-size: 15px;">E</a>&nbsp; <a href="/web/website/about/directory/#F" style="text-decoration: none; font-size: 15px;">F</a>&nbsp; <a href="/web/website/about/directory/#G" style="text-decoration: none; font-size: 15px;">G</a>&nbsp; <a href="/web/website/about/directory/#H" style="text-decoration: none; font-size: 15px;">H</a>&nbsp; I&nbsp; <a href="/web/website/about/directory/#J" style="text-decoration: none; font-size: 15px;">J</a>&nbsp; <a href="/web/website/about/directory/#K" style="text-decoration: none; font-size: 15px;">K</a>&nbsp; <a href="/web/website/about/directory/#L" style="text-decoration: none; font-size: 15px;">L</a>&nbsp; <a href="/web/website/about/directory/#M" style="text-decoration: none; font-size: 15px;">M</a>&nbsp; <a href="/web/website/about/directory/#N" style="text-decoration: none; font-size: 15px;">N</a>&nbsp; <a href="/web/website/about/directory/#O" style="text-decoration: none; font-size: 15px;">O</a>&nbsp; <a href="/web/website/about/directory/#P" style="text-decoration: none; font-size: 15px;">P</a>&nbsp; Q&nbsp; <a href="/web/website/about/directory/#R" style="text-decoration: none; font-size: 15px;">R</a>&nbsp; <a href="/web/website/about/directory/#S" style="text-decoration: none; font-size: 15px;">S</a>&nbsp; <a href="/web/website/about/directory/#T" style="text-decoration: none; font-size: 15px;">T</a>&nbsp; <a href="/web/website/about/directory/#U" style="text-decoration: none; font-size: 15px;">U</a>&nbsp; <a href="/web/website/about/directory/#V" style="text-decoration: none; font-size: 15px;">V</a>&nbsp; <a href="/web/website/about/directory/#W" style="text-decoration: none; font-size: 15px;">W</a>&nbsp; <a href="/web/website/about/directory/#X" style="text-decoration: none; font-size: 15px;">X</a>&nbsp; Y&nbsp; <a href="/web/website/about/directory/#Z" style="text-decoration: none; font-size: 15px;">Z</a>&nbsp;</strong></p>
 </center>
 <p>
 	&nbsp;</p>
@@ -186,14 +186,6 @@
 				<a href="mailto:mbrueschke@tacc.utexas.edu">mbrueschke@tacc.utexas.edu</a></td>
 			<td>
 				Networking, Security &amp; Operations</td>
-		</tr>
-		<tr>
-			<td>
-				<a href="/web/website/about/directory/janie-bushn">Bushn, Janie</a></td>
-			<td>
-				<a href="mailto:jbushn@tacc.utexas.edu">jbushn@tacc.utexas.edu</a></td>
-			<td>
-				Center Operations &amp; Administration</td>
 		</tr>
 		<tr>
 			<td>
@@ -597,14 +589,6 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/shweta-gopaulakrishnan">Gopaulakrishnan, Shweta</a></td>
-			<td>
-				<a href="mailto:sgopal@tacc.utexas.edu">sgopal@tacc.utexas.edu</a></td>
-			<td>
-				Life Sciences Computing</td>
-		</tr>
-		<tr>
-			<td>
 				<a href="/web/website/about/directory/sarah-gray">Gray, Sarah</a></td>
 			<td>
 				<a href="mailto:sgray@tacc.utexas.edu">sgray@tacc.utexas.edu</a></td>
@@ -626,14 +610,6 @@
 				<a href="mailto:agupta@tacc.utexas.edu">agupta@tacc.utexas.edu</a></td>
 			<td>
 				Scalable Computational Intelligence</td>
-		</tr>
-		<tr>
-			<td>
-				<a href="/web/website/about/directory/harika-gurram">Gurram, Harika</a></td>
-			<td>
-				<a href="mailto:hgurram@tacc.utexas.edu">hgurram@tacc.utexas.edu</a></td>
-			<td>
-				Web &amp; Mobile Applications</td>
 		</tr>
 		<tr>
 			<td>
@@ -730,14 +706,6 @@
 				<a href="mailto:mjacobson@tacc.utexas.edu">mjacobson@tacc.utexas.edu</a></td>
 			<td>
 				<a name="J"></a> Expanding Pathways in Computing (EPIC)</td>
-		</tr>
-		<tr>
-			<td>
-				<a href="/web/website/about/directory/owais-jamil">Jamil, Owais</a></td>
-			<td>
-				<a href="mailto:ojamil@tacc.utexas.edu">ojamil@tacc.utexas.edu</a></td>
-			<td>
-				Web &amp; Mobile Applications</td>
 		</tr>
 		<tr>
 			<td>
@@ -1325,27 +1293,11 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/tony-violante">Violante, Tony</a></td>
-			<td>
-				<a href="mailto:tviolante@tacc.utexas.edu">tviolante@tacc.utexas.edu</a></td>
-			<td>
-				Networking, Security &amp; Operations</td>
-		</tr>
-		<tr>
-			<td>
-				<a href="/web/website/about/directory/david-walling" t3url="296">Walling, David</a></td>
-			<td>
-				<a href="mailto:walling@tacc.utexas.edu">walling@tacc.utexas.edu</a></td>
-			<td>
-				<a name="W"></a> Data Management &amp; Collections</td>
-		</tr>
-		<tr>
-			<td>
 				<a href="/web/website/about/directory/ian-wang">Wang, Ian</a></td>
 			<td>
 				<a href="mailto:iwang@tacc.utexas.edu">iwang@tacc.utexas.edu</a></td>
 			<td>
-				HPC Performance &amp; Architectures</td>
+				<a name="W"></a> HPC Performance &amp; Architectures</td>
 		</tr>
 		<tr>
 			<td>
@@ -1402,14 +1354,6 @@
 				<a href="mailto:xwj@tacc.utexas.edu">xwj@tacc.utexas.edu</a></td>
 			<td>
 				<a name="X"></a> Data Management &amp; Collections</td>
-		</tr>
-		<tr>
-			<td>
-				<a href="/web/website/about/directory/quan-yuan">Yuan, Quan</a></td>
-			<td>
-				<a href="mailto:qyuan@tacc.utexas.edu">qyuan@tacc.utexas.edu</a></td>
-			<td>
-				<a name="Y"></a> HPC Frontline Group</td>
 		</tr>
 		<tr>
 			<td>
