RT-21750: Add ANdrea Wilson to Staff

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -1325,6 +1325,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/andrea-wilson">Wilson, Andrea</a></td>
+			<td>
+				<a href="mailto:andrea.wilson@austin.utexas.edu">andrea.wilson@austin.utexas.edu</a></td>
+			<td>
+				Center Operations &amp; Administration</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/garland-whiteside" t3url="294">Whiteside, Garland</a></td>
 			<td>
 				<a href="mailto:garland@tacc.utexas.edu">garland@tacc.utexas.edu</a></td>
