--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -121,11 +121,26 @@
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
+				<a aria-controls="wma-software-devloper" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#wma-software-devloper" role="button">Software Developer</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="wma-software-devloper" role="tabpanel">
+			<div class="panel-body">
+				<p>
+					This position will contribute to the design, development, and maintenance of the Web &amp; Mobile Applications (WMA) group web services and applications.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Software-Developer_R_00019253" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
 				<a aria-controls="sys-admin-i" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#sys-admin-i" role="button">Systems Administrator I</a></h4>
 		</div>
 		<div aria-labelledby="data" class="panel-collapse collapse" id="sys-admin-i" role="tabpanel">
 			<div class="panel-body">
-				<p>This position will join the Texas Advanced Computing Center(TACC) as part of the Technical Infrastructure team. The position will provide leadership and technical expertise to TACC's advanced computing activities, supporting and enhancing TACC's world class supercomputing resources.</p>
+				<p>
+					This position will join the Texas Advanced Computing Center(TACC) as part of the Technical Infrastructure team. The position will provide leadership and technical expertise to TACC's advanced computing activities, supporting and enhancing TACC's world class supercomputing resources.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Systems-Administrator-I_R_00019313" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
