Quick: Chanté Steinbarth → Moreland

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -901,6 +901,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/chante-moreland">Moreland, Chanté</a></td>
+			<td>
+				<a href="mailto:csteinbarth@tacc.utexas.edu">csteinbarth@tacc.utexas.edu</a></td>
+			<td>
+				Center Operations &amp; Administration</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/paul-navratil">Navratil, Paul</a></td>
 			<td>
 				<a href="mailto:pnav@tacc.utexas.edu">pnav@tacc.utexas.edu</a></td>
@@ -1186,14 +1194,6 @@
 				<a href="mailto:dan@tacc.utexas.edu">dan@tacc.utexas.edu</a></td>
 			<td>
 				Associate Vice President of Research; Executive Director</td>
-		</tr>
-		<tr>
-			<td>
-				<a href="/web/website/about/directory/chante-steinbarth">Steinbarth, Chanté</a></td>
-			<td>
-				<a href="mailto:csteinbarth@tacc.utexas.edu">csteinbarth@tacc.utexas.edu</a></td>
-			<td>
-				Center Operations &amp; Administration</td>
 		</tr>
 		<tr>
 			<td>
