--- a/web-content/root/reu--content.html
+++ b/web-content/root/reu--content.html
@@ -36,8 +36,10 @@
 	APPLICATION &amp; SELECTION</h4>
 <!--<p>
 	The application period for Summer 2022 is approaching (contingent on funding). Be the first to find out about updates: <a href="https://utexas.qualtrics.com/jfe/form/SV_dipKcjC7PAF5qmO" target="_blank">Interest Form</a>.</p>-->
+<!--<p>
+	The application for Summer 2022 is now open.</p>-->
 <p>
-	The application for Summer 2022 is now open.</p>
+	The application for Summer 2022 is closed. Notifications of acceptance for Summer 2022: Rolling until April 28. The application for Summer 2023 will open on November 1, 2022.</p>
 <ol>
 	<li>
 		Complete the <a href="https://forms.gle/uAoQft2dSEvo8dkB6" target="_blank">application</a> before April 22, 2022, 11:59 pm CST.</li>
