chore(jobs): use output markup consistent with CMS

--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -84,7 +84,7 @@
 		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate" role="tabpanel">
 			<div class="panel-body">
 				<p>
-					This Research Associate for High Performance Computing (HPC) will provide leadership and technical expertise to TACC's HPC research, development, and support initiatives with a strong emphasis on supporting climate/weather/ocean research on HPC resources.</p>
+					This Research Associate for High Performance Computing (HPC) will provide leadership and technical expertise to TACC’s HPC research, development, and support initiatives with a strong emphasis on supporting climate&#x2F;weather&#x2F;ocean research on HPC resources.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00018422" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
@@ -98,7 +98,7 @@
 		<div aria-labelledby="data" class="panel-collapse collapse" id="hpc-user-support-research-engineering-scientist-associate-ii" role="tabpanel">
 			<div class="panel-body">
 				<p>
-					The Research Engineering/Scientist Associate II will join the High Performance Computing (HPC) area and serve as front-line user support. This individual will answer technical questions, support training efforts, and review technical documentation.</p>
+					The Research Engineering&#x2F;Scientist Associate II will join the High Performance Computing (HPC) area and serve as front-line user support. This individual will answer technical questions, support training efforts, and review technical documentation.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/HPC-User-Support-Research-Engineering-Scientist-Associate-II_R_00018423" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
@@ -126,7 +126,7 @@
 		<div aria-labelledby="data" class="panel-collapse collapse" id="sys-admin-i" role="tabpanel">
 			<div class="panel-body">
 				<p>
-					This position will join the Texas Advanced Computing Center(TACC) as part of the Technical Infrastructure team. The position will provide leadership and technical expertise to TACC's advanced computing activities, supporting and enhancing TACC's world class supercomputing resources.</p>
+					This position will join the Texas Advanced Computing Center(TACC) as part of the Technical Infrastructure team. The position will provide leadership and technical expertise to TACC&#39;s advanced computing activities, supporting and enhancing TACC&#39;s world class supercomputing resources.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Systems-Administrator-I_R_00019313" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
