--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -132,6 +132,20 @@
 			</div>
 		</div>
 	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="eng-sci-assoc" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#eng-sci-assoc" role="button">Engineering Scientist Associate</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="eng-sci-assoc" role="tabpanel">
+			<div class="panel-body">
+				<p>
+					This position will help envision, design, create, and support innovative technical approaches for applying big data applications and machine learning technologies to topical areas ranging from epidemiology to synthetic biology to neuroscience.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Engineering-Scientist-Associate_R_00018928" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
 </div>
 <p style="font-size:small;">
 	All applicants must formally apply for a specific position through <a href="http://www.utexas.edu/jobs" target="_blank">UT Austin Jobs</a>. For complete job description(s), click on a listing above, and follow instructions to apply for the specific job of interest by using your online resume. For additional information about positions, please contact Sophia Price at <a href="mailto:jobs@tacc.utexas.edu">jobs@tacc.utexas.edu</a></p>
