chore: save from CMS, /education/epic/research

--- a/web-content/root/education/EPIC/research.html
+++ b/web-content/root/education/EPIC/research.html
@@ -29,23 +29,24 @@
 					Do all schools have instructors qualified to teach CS or the resources to train them?</dd>
 			</dl>
 			</figcaption></figure>
-		<p><a href="https://cacm.acm.org/magazines/2021/2/250074-cape/fulltext" target="_blank">CAPE</a> is a framework designed to help education leaders, policy makers, and researchers assess equity in CS education at multiple levels of the educational system. The framework addresses four key components of CS education: Capacity for, Access to, Participation in, and Experience of CS education (CAPE). The pyramid depicted here illustrates how the four components of the framework work progressively, building and relying on the previous component. If students are to have good experiences learning CS, they must first elect to participate in CS courses and programs. If students are to choose to participate in CS, they must first have access to CS courses and programs. If schools are to provide students access to CS, they must first have the capacity to offer CS courses and programs. The core idea of the framework is that there are issues of equity to address at every level.</p>
+		<p>
+			<a href="https://cacm.acm.org/magazines/2021/2/250074-cape/fulltext" target="_blank">CAPE</a> is a framework designed to help education leaders, policy makers, and researchers assess equity in CS education at multiple levels of the educational system. The framework addresses four key components of CS education: Capacity for, Access to, Participation in, and Experience of CS education (CAPE). The pyramid depicted here illustrates how the four components of the framework work progressively, building and relying on the previous component. If students are to have good experiences learning CS, they must first elect to participate in CS courses and programs. If students are to choose to participate in CS, they must first have access to CS courses and programs. If schools are to provide students access to CS, they must first have the capacity to offer CS courses and programs. The core idea of the framework is that there are issues of equity to address at every level.</p>
 	</div>
 	<h4>
 		CS Equity Deep Dive</h4>
 	<p>
 		Lead: <a href="https://www.tacc.utexas.edu/about/directory/jayce-warner">Jayce Warner</a> &amp; <a href="https://www.tacc.utexas.edu/about/directory/stephanie-baker">Stephanie Baker</a></p>
 	<p>
-		CS Equity Deep Dive is a research project funded by a Google Computer Science Education Research (CS-ER) award that examines the factors that are associated with access to and participation in computing in middle and high school, as well as the relationship between secondary enrollment in CS and postsecondary outcomes. The study merges K-12 and college-level data from the Texas Education Research Center, the Stanford Education Data Archive, and the National Student Clearinghouse for over 3 million students to take an in-depth look at the correlates and consequences of disparities in students&rsquo; access to and participation in computing education.</p>
+		CS Equity Deep Dive is a research project funded by a Google Computer Science Education Research (CS-ER) award that examines the factors that are associated with access to and participation in computing in middle and high school, as well as the relationship between secondary enrollment in CS and postsecondary outcomes. The study merges K-12 and college-level data from the Texas Education Research Center, the Stanford Education Data Archive, and the National Student Clearinghouse for over 3 million students to take an in-depth look at the correlates and consequences of disparities in students' access to and participation in computing education.</p>
 	<h4>
 		<abbr title="Expanding Computing Education Pathways">ECEP</abbr> (<dfn>Expanding Computing Education Pathways</dfn>)</h4>
 	<p>
 		Lead: <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a></p>
 	<div class="s-text-figure-pair  clearfix">
 		<figure class="col-sm-5  pull-right">
-			<a href="/documents/1084364/2044593/2019a_ECEP_Map_Phases_purplehues.jpeg" target="_blank"><img class="img-responsive" src="/documents/1084364/2044593/2019a_ECEP_Map_Phases_purplehues.jpeg" title="A map of the U.S. states &mp; terrirories in the ECEP alliance" /></a><figcaption class="sr-only">
+			<a href="/documents/1084364/2044593/2019a_ECEP_Map_Phases_purplehues.jpeg" target="_blank"><img class="img-responsive" src="/documents/1084364/2044593/2019a_ECEP_Map_Phases_purplehues.jpeg" title="A map of the U.S. states ∓ terrirories in the ECEP alliance" /></a><figcaption class="sr-only">
 			<h5>
-				23 ECEP States & U.S. Territories</h5>
+				23 ECEP States &amp; U.S. Territories</h5>
 			<h6>
 				Expanding Computing Education Pathways</h6>
 			<dl>
@@ -53,50 +54,78 @@
 					ECEP Origin States</dt>
 				<dd>
 					<ul>
-						<li>GA</li>
-						<li>MA</li>
-						</ul></dd>
+						<li>
+							GA</li>
+						<li>
+							MA</li>
+					</ul>
+				</dd>
 				<dt>
 					Phase 1</dt>
 				<dd>
 					<ul>
-						<li>CA</li>
-						<li>SC</li>
-						</ul></dd>
+						<li>
+							CA</li>
+						<li>
+							SC</li>
+					</ul>
+				</dd>
 				<dt>
 					Phase 2</dt>
 				<dd>
 					<ul>
-						<li>AL</li>
-						<li>CT</li>
-						<li>IN</li>
-						<li>MD</li>
-						<li>NH</li>
-						<li>PR</li>
-						<li>UT</li>
-						<li>TX</li>
-						</ul></dd>
+						<li>
+							AL</li>
+						<li>
+							CT</li>
+						<li>
+							IN</li>
+						<li>
+							MD</li>
+						<li>
+							NH</li>
+						<li>
+							PR</li>
+						<li>
+							UT</li>
+						<li>
+							TX</li>
+					</ul>
+				</dd>
 				<dt>
 					Phase 3</dt>
 				<dd>
 					<ul>
-						<li>AR</li>
-						<li>NC</li>
-						<li>NV</li>
-						<li>RI</li>
-						<li>VA</li>
-						</ul></dd>
+						<li>
+							AR</li>
+						<li>
+							NC</li>
+						<li>
+							NV</li>
+						<li>
+							RI</li>
+						<li>
+							VA</li>
+					</ul>
+				</dd>
 				<dt>
 					Phase 4</dt>
 				<dd>
 					<ul>
-						<li>HI</li>
-						<li>MN</li>
-						<li>MS</li>
-						<li>OH</li>
-						<li>OR</li>
-						<li>WA</li>
-						</ul></dd>
+						<li>
+							HI</li>
+						<li>
+							MN</li>
+						<li>
+							MS</li>
+						<li>
+							OH</li>
+						<li>
+							OR</li>
+						<li>
+							WA</li>
+					</ul>
+				</dd>
 			</dl>
 			</figcaption></figure>
 		<p>
@@ -111,7 +140,7 @@
 	<h4>
 		<dfn><abbr title="Accelerating Women's Success and Mastery">AWSM</abbr></dfn> in CS</h4>
 	<p>
-		Lead: <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a> & Joshua Childs</p>
+		Lead: <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a> &amp; Joshua Childs</p>
 	<div class="clearfix">
 		<img class="col-xs-3  col-sm-2  pull-left  img-responsive" src="/documents/1084364/2044593/AWSM_logo.svg" title="The logo of AWSM in CS (Accelerating Women's Success and Mastery in Computer Science)" />
 		<p>
@@ -126,15 +155,16 @@
 	<h4>
 		<abbr title="Computing Educator Diversity Initiative">CEDI</abbr> (<dfn>Computing Educator Diversity Initiative</dfn>)</h4>
 	<p>
-		Lead: <a href="https://www.tacc.utexas.edu/about/directory/allen-antoine">Allen Antoine</a>, <a href="https://www.tacc.utexas.edu/about/directory/stephanie-baker">Stephanie Baker</a>, & <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a></p>
+		Lead: <a href="https://www.tacc.utexas.edu/about/directory/allen-antoine">Allen Antoine</a>, <a href="https://www.tacc.utexas.edu/about/directory/stephanie-baker">Stephanie Baker</a>, &amp; <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a></p>
 	<div class="s-text-figure-pair clearfix">
 		<img class="col-sm-5 pull-right img-responsive" src="/documents/1084364/2044593/CEDI_logo.png" title="CEDI (computing educator diversity initiative) and imagery of finger prints, WeTeachCS logo, and CEDI logo" />
 		<p>
-			CEDI consists of in-service educators who are historically underrepresented in CS that will work within a community of practice as together they deepen their CS content knowledge, pedagogical skills, and equitable strategies — and receive support to obtain their CS teacher certification. Funded by the National Science Foundation (NSF #1837602) and Microsoft, the CEDI program recruits educators who identify with historically underrepresented student populations to become certified high school CS teachers. The NSF has identified the following groups as historically underrepresented in CS: women, persons with disabilities, Blacks and African Americans, Hispanics, American Indians, Alaska Natives, Native Hawaiians, and Pacific Islanders. <a href="https://utakeit.tacc.utexas.edu/resources/cedi-Program/" target="_blank">Learn more</a> about the CEDI program.</p></div>
+			CEDI consists of in-service educators who are historically underrepresented in CS that will work within a community of practice as together they deepen their CS content knowledge, pedagogical skills, and equitable strategies — and receive support to obtain their CS teacher certification. Funded by the National Science Foundation (NSF #1837602) and Microsoft, the CEDI program recruits educators who identify with historically underrepresented student populations to become certified high school CS teachers. The NSF has identified the following groups as historically underrepresented in CS: women, persons with disabilities, Blacks and African Americans, Hispanics, American Indians, Alaska Natives, Native Hawaiians, and Pacific Islanders. <a href="https://utakeit.tacc.utexas.edu/resources/cedi-Program/" target="_blank">Learn more</a> about the CEDI program.</p>
+	</div>
 	<h4>
 		<abbr title="Strategies for Effective and Inclusive CS Teaching">ScIP</abbr> (<dfn>Strategies for Effective and Inclusive CS Teaching</dfn>)</h4>
 	<p>
-		Lead: <a href="https://www.tacc.utexas.edu/about/directory/nicole-martin">Nicole Martin</a>, <a href="https://www.tacc.utexas.edu/about/directory/allen-antoine">Allen Antoine</a>, & <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a></p>
+		Lead: <a href="https://www.tacc.utexas.edu/about/directory/nicole-martin">Nicole Martin</a>, <a href="https://www.tacc.utexas.edu/about/directory/allen-antoine">Allen Antoine</a>, &amp; <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a></p>
 	<p>
 		The goal of the ScIP project is to support more equitable and inclusive classroom environments so that all students, especially those from marginalized communities, build a sense of belonging and identity in computer science (CS). ScIP aims to provide K-12 teachers with equity-focused professional learning experiences so they are equipped to embrace diversity and focus on equitable access to, participation in, and experiences of CS in their schools and classrooms. The hybrid professional learning course is designed for cohorts of teachers to complete together, and ScIP also hosts facilitator trainings to offer the course at scale to teaches across the country. <a href="https://utakeit.tacc.utexas.edu/effective-strategies-V2/" target="_blank">Learn more</a> about the course.</p>
 	<h3>
