feat(RT-21866): /education/epic/research new text

--- a/web-content/root/education/EPIC/research.html
+++ b/web-content/root/education/EPIC/research.html
@@ -41,7 +41,7 @@
 	<h4>
 		<abbr title="Expanding Computing Education Pathways">ECEP</abbr> (<dfn>Expanding Computing Education Pathways</dfn>)</h4>
 	<p>
-		Lead: <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a></p>
+		Lead: <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a>, Sarah Dunton &amp; Joshua Childs</p>
 	<div class="s-text-figure-pair  clearfix">
 		<figure class="col-sm-5  pull-right">
 			<a href="/documents/1084364/2044593/2019a_ECEP_Map_Phases_purplehues.jpeg" target="_blank"><img class="img-responsive" src="/documents/1084364/2044593/2019a_ECEP_Map_Phases_purplehues.jpeg" title="A map of the U.S. states ∓ terrirories in the ECEP alliance" /></a><figcaption class="sr-only">
@@ -155,11 +155,11 @@
 	<h4>
 		<abbr title="Computing Educator Diversity Initiative">CEDI</abbr> (<dfn>Computing Educator Diversity Initiative</dfn>)</h4>
 	<p>
-		Lead: <a href="https://www.tacc.utexas.edu/about/directory/allen-antoine">Allen Antoine</a>, <a href="https://www.tacc.utexas.edu/about/directory/stephanie-baker">Stephanie Baker</a>, &amp; <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a></p>
+		Lead: <a href="https://www.tacc.utexas.edu/about/directory/allen-antoine">Allen Antoine</a>, <a href="https://www.tacc.utexas.edu/about/directory/stephanie-baker">Stephanie Baker</a>, <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a> &amp; Joshua Childs</p>
 	<div class="s-text-figure-pair clearfix">
 		<img class="col-sm-5 pull-right img-responsive" src="/documents/1084364/2044593/CEDI_logo.png" title="CEDI (computing educator diversity initiative) and imagery of finger prints, WeTeachCS logo, and CEDI logo" />
 		<p>
-			CEDI consists of in-service educators who are historically underrepresented in CS that will work within a community of practice as together they deepen their CS content knowledge, pedagogical skills, and equitable strategies — and receive support to obtain their CS teacher certification. Funded by the National Science Foundation (NSF #1837602) and Microsoft, the CEDI program recruits educators who identify with historically underrepresented student populations to become certified high school CS teachers. The NSF has identified the following groups as historically underrepresented in CS: women, persons with disabilities, Blacks and African Americans, Hispanics, American Indians, Alaska Natives, Native Hawaiians, and Pacific Islanders. <a href="https://utakeit.tacc.utexas.edu/resources/cedi-Program/" target="_blank">Learn more</a> about the CEDI program.</p>
+			CEDI consists of in-service educators who are historically underrepresented in CS that will work within a community of practice as together they deepen their CS content knowledge, pedagogical skills, and equitable strategies — and receive support to obtain their CS teacher certification. Funded by the National Science Foundation (NSF #1837602) and Microsoft, the CEDI program recruits educators who identify with historically underrepresented student populations to become certified high school CS teachers. The NSF has identified the following groups as historically underrepresented in CS: women, persons with disabilities, Blacks and African Americans, Hispanics, American Indians, Alaska Natives, Native Hawaiians, and Pacific Islanders. <a href="https://utakeit.tacc.utexas.edu/resources/cedi-Program/" target="_blank">Learn more</a> about the CEDI program. See how CEDI is <a href="https://www.tacc.utexas.edu/-/changing-the-face-of-cs-education">changing the face of CS education</a>.</p>
 	</div>
 	<h4>
 		<abbr title="Strategies for Effective and Inclusive CS Teaching">ScIP</abbr> (<dfn>Strategies for Effective and Inclusive CS Teaching</dfn>)</h4>
