feat(rt-21872): cybersecurity camp forms link

--- a/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -156,9 +156,13 @@
 							Required forms will be available soon.</li>
 					</ul>-->
 					<p>
-						<em>Code of Conduct,</em><br />
-						<em>Release and Indemnification</em><br />
-						<em>&amp; Media Release<!--:--></em></p>
+						<a href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cXKQGsJJEGEI%253d&filter=peid%7CXKQGsJJEGEI%3D" target="_blank">
+						Code of Conduct,<br />
+						Release and Indemnification,<br />
+						Media Release,<br />
+						Y.P.P. Communication Plan<br />
+						Y.P.P. Medical Treatment Authorization<br />
+						&amp; Transportation Form</a></p>
 					<!--<ul class="info-list">
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d587675e-b44e-4223-af5d-9ca523cf5168&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">English</a></li>
@@ -198,7 +202,7 @@
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
 					<p>
-						<em>Y.P.P. Communication Plan<!--:--></em></p>
+						<em>See "PROGRAM FORMS"</em></p>
 					<!--<ul class="info-list">
 						<li>
 							<a href="/documents/1084364/1736606/Comm+Plan+GenCyber.pdf" target="_blank" title="Code@TACC Robotics Communication Plan - ENGLISH">English</a></li>
