fix(rt-21872): reduce scope of cybers. camp change

--- a/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -122,7 +122,7 @@
 				</div>-->
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
-						WHAT TO KNOW</h4>
+						WHAT TO BRING</h4>
 					<ul class="info-list">
 						<li>
 							Willingness to learn</li>
@@ -149,20 +149,21 @@
 					</ul>
 				</div>-->
 				<div class="col-md-4 col-sm-12">
-					<h4 class="camp-subhead">
-						PROGRAM FORMS</h4>
+					<!--<h4 class="camp-subhead">
+						PROGRAM FORMS</h4>-->
 					<!--<ul class="info-list">
 						<li>
 							Required forms will be available soon.</li>
 					</ul>-->
 					<p>
-						<a href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cXKQGsJJEGEI%253d&filter=peid%7CXKQGsJJEGEI%3D" target="_blank">
+						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cXKQGsJJEGEI%253d&filter=peid%7CXKQGsJJEGEI%3D" target="_blank">Program Forms</a></p>
+					<p>
 						Code of Conduct,<br />
 						Release and Indemnification,<br />
 						Media Release,<br />
 						Y.P.P. Communication Plan<br />
 						Y.P.P. Medical Treatment Authorization<br />
-						&amp; Transportation Form</a></p>
+						&amp; Transportation Form</p>
 					<!--<ul class="info-list">
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d587675e-b44e-4223-af5d-9ca523cf5168&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">English</a></li>
