--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -8,10 +8,21 @@
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=118" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/tacc-containers-2022-04.png/e64a4b57-a634-4891-ae13-d6463d161944?t=1649168077221" style="margin-bottom:10px;" /></a></div>
+		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=118" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/tacc-containers-2022-04.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
 			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=118" target="_blank">Containers @TACC Tutorial -- Webinar and In-Person</a><br />
-			May 4<span>&nbsp; |&nbsp; 9:00am – 4:00pm CST</span></p>
+			May 4<span>&nbsp; |&nbsp;
+			9:00am – 4:00pm CST</span></p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://weteachcssummit2022.sched.com/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/css-for-yall.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://weteachcssummit2022.sched.com/" target="_blank">2022 We_Teach CS Summit</a><br />
+			June 20-21&nbsp; |&nbsp;
+			Georgetown, Texas</p>
 	</div>
 </div>
