feat(rt-21919): update staff dept

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -447,9 +447,9 @@
 			<td>
 				<a href="/web/website/about/directory/nathan-franklin">Franklin, Nathan</a></td>
 			<td>
-				<a href="mailto:nfranklin@tacc.utexas.edu ">nfranklin@tacc.utexas.edu </a></td>
+				<a href="mailto:nfranklin@tacc.utexas.edu">nfranklin@tacc.utexas.edu</a></td>
 			<td>
-				Web &amp; Mobile Applications</td>
+				Advanced Computing Interfaces, Web &amp; Mobile Applications</td>
 		</tr>
 		<tr>
 			<td>
