--- a/web-content/root/education/stem-programs/code-at-tacc/connected.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/connected.html
@@ -91,12 +91,10 @@
 		<div class="col-md-12">
 			<h2 class="camp-subhead">
 				Program Information</h2>
-			<!-- <img alt="Supercompute Deep Earth: 2015 Gordon Bell Prize Winner" class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1484428/deep-earth.png" style="margin:0px; padding:0px; width:100%;" alt="Camp FAQs"/> -->
 			<div class="row  camp-info">
 				<div class="col-md-4 col-sm-12">
-					<!-- <img alt="Advanced Ligo Discover: 2016" class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1484428/ligo.png" style="margin:0px; padding:0px; width:100%;" alt="What to Bring" /> -->
 					<h4 class="camp-subhead">
-						WHAT TO KNOW</h4>
+						WHAT TO BRING</h4>
 					<ul class="info-list">
 						<li>
 							Willingness to learn</li>
@@ -107,29 +105,30 @@
 					</ul>
 				</div>
 				<div class="col-md-4 col-sm-12">
-					<h4 class="camp-subhead">
-						PROGRAM FORMS</h4>
-					<p>
-						<em>Code of Conduct,</em><br />
-						<em>Release and Indemnification</em><br />
-						<em>&amp; Media Release<!--:--></em></p>
+					<!--<h4 class="camp-subhead">
+						PROGRAM FORMS</h4>-->
 					<!--<ul class="info-list">
 						<li>
-							<a href="https://powerforms.docusign.net/7f448a69-ffbe-4dc1-ae3f-cbab0cb657ad?env=na1&acct=d40a37d5-d708-44dd-9ea7-aab378b81326&accountId=d40a37d5-d708-44dd-9ea7-aab378b81326" target="_blank" title="2021 Code@TACC Connected Forms - ENGLISH">English</a></li>
-						<li>
-							<a href="https://powerforms.docusign.net/9ff76af9-3e82-481c-9cc0-06aa08e9f3a4?env=na1&acct=d40a37d5-d708-44dd-9ea7-aab378b81326&accountId=d40a37d5-d708-44dd-9ea7-aab378b81326" target="_blank" title="2021 Code@TACC Connected Forms - SPANISH">Español</a></li>
-					</ul>--></div>
-				<div class="col-md-4 col-sm-12">
+							Required forms will be available soon.</li>
+					</ul>-->
+					<p>
+						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257c%252f143oHZkDNA%253d&filter=peid%7C%2F143oHZkDNA%3D" target="_blank">Program Forms</a></p>
+					<p>
+						Release and Indemnification,<br />
+						Media Release,<br />
+						Y.P.P. Medical Treatment Authorization<br />
+						&amp; Transportation Form</p>
+				</div>
+				<!--<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
-					<p>
-						<em>Y.P.P. Communication Plan<!--:--></em></p>
-					<!--<ul class="info-list">
+					<ul class="info-list">
 						<li>
-							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+Connected.pdf" target="_blank">English</a></li>
+							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+Connected.pdf" target="_blank">2021 Y.P.P. Communication Plan - English</a></li>
 						<li>
-							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+Connected+-+SPANISH.pdf" target="_blank">Español</a></li>
-					</ul>--></div>
+							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+Connected+-+SPANISH.pdf" target="_blank">2021 Y.P.P. Communication Plan - Español</a></li>
+					</ul>
+				</div>-->
 			</div>
 		</div>
 	</div>
