--- a/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -94,32 +94,7 @@
 		<div class="col-md-12">
 			<h2 class="camp-subhead">
 				Program Information</h2>
-			<!-- <img alt="Supercompute Deep Earth: 2015 Gordon Bell Prize Winner" class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1484428/deep-earth.png" style="margin:0px; padding:0px; width:100%;" alt="Camp FAQs"/> -->
 			<div class="row  camp-info">
-				<!--<div class="col-md-4 col-sm-12">
-					<h4 class="camp-subhead">
-						WHAT TO BRING</h4>
-					<ul class="info-list">
-						<li>
-							Shorts, T-shirts, jeans, pants, sneakers or sandals are acceptable</li>
-						<li>
-							Nice clothes/shoes for a team presentation (Business casual is fine for final day)</li>
-						<li>
-							Accessories (Belt)</li>
-						<li>
-							Umbrella (Rain or shine, we will walk.)</li>
-						<li>
-							Water bottle</li>
-						<li>
-							Backpack</li>
-						<li>
-							Pens/Pencils</li>
-						<li>
-							1 small notebook</li>
-						<li>
-							A list of questions that you want to ask current students and staff about UT Austin, or college life.</li>
-					</ul>
-				</div>-->
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						WHAT TO BRING</h4>
@@ -132,22 +107,6 @@
 							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to "Get" a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>-->
 					</ul>
 				</div>
-				<!--<div class="col-md-4 col-sm-12">
-					<h4 class="camp-subhead">
-						WHAT <b>NOT</b> TO BRING</h4>
-					<ul class="info-list">
-						<li>
-							Weapons, explosives, candles, flammable materials &nbsp;</li>
-						<li>
-							Expensive sports equipment or musical instruments &nbsp;</li>
-						<li>
-							Illegal substances such as alcohol, tobacco, or drugs &nbsp;</li>
-						<li>
-							Pets/Animals (with the exception of service animals) &nbsp;</li>
-						<li>
-							A Bad Attitude</li>
-					</ul>
-				</div>-->
 				<div class="col-md-4 col-sm-12">
 					<!--<h4 class="camp-subhead">
 						PROGRAM FORMS</h4>-->
@@ -163,41 +122,7 @@
 						Media Release,<br />
 						Y.P.P. Medical Treatment Authorization<br />
 						&amp; Transportation Form</p>
-					<!--<ul class="info-list">
-						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d587675e-b44e-4223-af5d-9ca523cf5168&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">English</a></li>
-						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d438f709-6ea0-4a45-89bc-138daf40ad00&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">Español</a></li>
-					</ul>--><!--<p>
-						<em>Code of Conduct:</em></p>
-					<ul class="info-list">
-						<li>
-							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - ENGLISH">English</a></li>
-						<li>
-							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct+-+SPANISH.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - SPANISH">Español</a></li>
-					</ul>--><!--<p>
-						<em>Compliance Forms:</em></p>
-					<ul class="info-list">
-						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83&amp;env=na1" target="_blank">English</a></li>
-						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f&amp;env=na1" target="_blank">Español</a></li>
-					</ul>
-					--><!--<p>
-						<em>Release and Indemnification Form:</em></p>
-					<ul class="info-list">
-						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d587675e-b44e-4223-af5d-9ca523cf5168&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">English</a></li>
-						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d438f709-6ea0-4a45-89bc-138daf40ad00&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">Español</a></li>
-					</ul>--><!--<p>
-						<em>Media Release:</em></p>
-					<ul class="info-list">
-						<li>
-							<a href="/documents/1084364/1736606/Media+Release+Robotics+-+Adult.pdf" target="_blank">English</a></li>
-						<li>
-							<a href="/documents/1084364/1736606/Media+Release+Robotics+-+Adult+-+SPANISH.pdf" target="_blank">Español</a></li>
-					</ul>--></div>
+				</div>
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
@@ -205,8 +130,9 @@
 						<li>
 							<a href="/documents/1084364/1736606/2022+YPP-Communication-Plan-Cybersecurity+English.pdf" target="_blank">2022 Y.P.P. Communication Plan - English</a></li>
 						<li>
-							<a href="/documents/1084364/1736606/2022+YPP-Communication-Plan-Cybersecurity-Spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Spanish</a></li>
-					</ul></div>
+							<a href="/documents/1084364/1736606/2022+YPP-Communication-Plan-Cybersecurity-Spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
