--- a/web-content/root/education/stem-programs/code-at-tacc/robotics.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/robotics.html
@@ -101,30 +101,6 @@
 			<h2 class="camp-subhead">
 				Program Information</h2>
 			<div class="row  camp-info">
-				<!--<div class="col-md-4 col-sm-12">
-					<h4 class="camp-subhead">
-						WHAT TO BRING</h4>
-					<ul class="info-list">
-						<li>
-							Shorts, T-shirts, jeans, pants, sneakers or sandals are acceptable</li>
-						<li>
-							Nice clothes/shoes for a team presentation (Business casual is fine for final day)</li>
-						<li>
-							Accessories (Belt)</li>
-						<li>
-							Umbrella (Rain or shine, we will walk.)</li>
-						<li>
-							Water bottle</li>
-						<li>
-							Backpack</li>
-						<li>
-							Pens/Pencils</li>
-						<li>
-							1 small notebook</li>
-						<li>
-							A list of questions that you want to ask current students and staff about UT Austin, or college life.</li>
-					</ul>
-				</div>-->
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						WHAT TO BRING</h4>
@@ -137,68 +113,32 @@
 							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to "Get" a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>-->
 					</ul>
 				</div>
-				<!--<div class="col-md-4 col-sm-12">
-					<h4 class="camp-subhead">
-						WHAT <b>NOT</b> TO BRING</h4>
-					<ul class="info-list">
-						<li>
-							Weapons, explosives, candles, flammable materials &nbsp;</li>
-						<li>
-							Expensive sports equipment or musical instruments &nbsp;</li>
-						<li>
-							Illegal substances such as alcohol, tobacco, or drugs &nbsp;</li>
-						<li>
-							Pets/Animals (with the exception of service animals) &nbsp;</li>
-						<li>
-							A Bad Attitude</li>
-					</ul>
-				</div>-->
 				<div class="col-md-4 col-sm-12">
-					<h4 class="camp-subhead">
-						PROGRAM FORMS</h4>
-					<p>
-						<em>Code of Conduct</em></p>
+					<!--<h4 class="camp-subhead">
+						PROGRAM FORMS</h4>-->
 					<!--<ul class="info-list">
 						<li>
-							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - ENGLISH">English</a></li>
-						<li>
-							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct+-+SPANISH.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - SPANISH">Español</a></li>
-					</ul>--><!--<p>
-						<em>Compliance Forms:</em></p>
-					<ul class="info-list">
-						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=6f948a45-b80c-4985-b9eb-7df53f1032a3&amp;env=na1" target="_blank">English</a></li>
-						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=7b4e849b-0139-4307-bdc8-b636a323b709&amp;env=na1" target="_blank">Español</a></li>
+							Required forms will be available soon.</li>
 					</ul>-->
 					<p>
-						<em>Release and Indemnification<!--:--></em></p>
-					<!--<ul class="info-list">
-						<li>
-							<a href="/documents/1084364/1736606/UT+Release+Agreement.pdf" target="_blank">English</a></li>
-						<li>
-							<a href="/documents/1084364/1736606/UT+Release+Agreement+-+SPANISH.pdf" target="_blank">Spanish</a></li>
-					</ul>-->
+						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cErEbGtkbztc%253d&filter=peid%7CErEbGtkbztc%3D" target="_blank">Program Forms</a></p>
 					<p>
-						<em>Media Release<!--:--></em></p>
-					<!--<ul class="info-list">
-						<li>
-							<a href="/documents/1084364/1736606/Media+Release Robotics+-+Adult.pdf" target="_blank">English</a></li>
-						<li>
-							<a href="/documents/1084364/1736606/Media+Release Robotics+-+Adult+-+SPANISH.pdf" target="_blank">Español</a></li>
-					</ul>--></div>
+						Code of Conduct,<br />
+						Release and Indemnification,<br />
+						Media Release,<br />
+						Y.P.P. Medical Treatment Authorization<br />
+						&amp; Transportation Form</p>
+				</div>
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
-					<p>
-						<em>Y.P.P. Communication Plan<!--:--></em></p>
-					<!--<ul class="info-list">
+					<ul class="info-list">
 						<li>
-							<a href="/documents/1084364/1736606/Comm+Plan+Robotics.pdf" target="_blank" title="Code@TACC Robotics Communication Plan - ENGLISH">English</a></li>
+							<a href="/documents/1084364/1736606/YPP+Communication+Plan+Robotics+2022+English.pdf" target="_blank">2022 Y.P.P. Communication Plan - English</a></li>
 						<li>
-							<a href="/documents/1084364/1736606/Comm+Plan+Robotics+-+SPANISH.pdf" target="_blank" title="Code@TACC Robotics Communication Plan - SPANISH">Español</a></li>
-					</ul>--></div>
-			</div>
+							<a href="/documents/1084364/1736606/YPP+Communication+Plan+Robotics+2022+Spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
+					</ul>
+				</div>
 		</div>
 	</div>
 </div>
