--- a/web-content/root/education/stem-programs/code-at-tacc/robotics.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/robotics.html
@@ -123,7 +123,7 @@
 					<p>
 						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cErEbGtkbztc%253d&filter=peid%7CErEbGtkbztc%3D" target="_blank">Program Forms</a></p>
 					<p>
-						Code of Conduct,<br />
+						Code of Conduct (sent in mail),<br />
 						Release and Indemnification,<br />
 						Media Release,<br />
 						Y.P.P. Medical Treatment Authorization<br />
@@ -134,9 +134,9 @@
 						CAMP PROGRAM</h4>
 					<ul class="info-list">
 						<li>
-							<a href="/documents/1084364/1736606/YPP+Communication+Plan+Robotics+2022+English.pdf" target="_blank">2022 Y.P.P. Communication Plan - English</a></li>
+							<a href="/documents/1084364/1736606/YPP+Communication+Plan+Robotics+2022+English.pdf/53093e51-0bb8-4bf1-afc5-4f97a7269ddc" target="_blank">2022 Y.P.P. Communication Plan - English</a></li>
 						<li>
-							<a href="/documents/1084364/1736606/YPP+Communication+Plan+Robotics+2022+Spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
+							<a href="/documents/1084364/1736606/YPP+Communication+Plan+Robotics+2022+Spanish.pdf/729f3cec-c6cd-4ee3-89ec-2d341ca58113" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
 					</ul>
 				</div>
 		</div>
