--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -8,6 +8,15 @@
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
+		<a href="https://research.utexas.edu/cbrs/classes/big-data-in-biology-summer-school/2022-summer-school/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/utvprsce.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://research.utexas.edu/cbrs/classes/big-data-in-biology-summer-school/2022-summer-school/" target="_blank">Big Data in Biology Summer School 2022</a><br />
+			May 31 – June 24, multiple courses lasting from 4-5 days</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
 		<a href="https://weteachcssummit2022.sched.com/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/css-for-yall.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
