--- a/web-content/root/about/directory--lead-team.html
+++ b/web-content/root/about/directory--lead-team.html
@@ -66,7 +66,7 @@
 		<h6 class="bottomless">
 			<a href="/web/website/about/directory/tim-cockerill">Tim Cockerill</a></h6>
 		<p class="topless">
-			Director of User Service</p>
+			Director of User Services</p>
 	</div>
 	<div class="col-md-2 col-xs-4">
 		<a href="/web/website/about/directory/maytal-dahan"><img alt="Maytal Dahan" class="lt-img" src="/documents/1084364/1085297/maytal-dahan.jpg/" style="border:0; margin-bottom:2px;" /></a>
