chore(rt-21873): add staff

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -165,6 +165,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/jessica-bradford">Bradford, Jessica</a></td>
+			<td>
+				<a href="mailto:jbradford@tacc.utexas.edu">jbradford@tacc.utexas.edu</a></td>
+			<td>
+				Center Operations &amp; Administration</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/laura-timm">Branch, Laura</a></td>
 			<td>
 				<a href="mailto:timm@tacc.utexas.edu">timm@tacc.utexas.edu</a></td>
